# This file defines the project metadata and dependencies.
[package]
name = "crossword-puzzle"
version = "0.1.5"
edition = "2021"
description = "A Rust library and CLI tool for generating crossword puzzles."
license = "MIT"
authors = []
repository = "https://github.com/mzyui/crossword-puzzle"
homepage = "https://github.com/mzyui/crossword-puzzle"
keywords = ["crossword", "puzzle", "generator", "cli", "game"]
categories = ["games", "command-line-utilities"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.141", optional = true }

[features]
serde = ["dep:serde", "serde_json"]

[dev-dependencies]

